# nonebot-plugin-discord-message-bridge

./: .gitignore  LICENSE  README.md  __init__.py  config.py  pyproject.toml  requirements.txt
docs/: dmb-config-example.yaml
src/nonebot_plugin_discord_message_bridge/: __init__.py  config.py  global_vars.py
src/nonebot_plugin_discord_message_bridge/bots/: discordbot.py
src/nonebot_plugin_discord_message_bridge/utils/: download.py  forward.py  local.py  send.py  yamlloader.py
utils/: local.py  send.py
