[project]
name = "nonebot-plugin-discord-message-bridge"

version = "1.0.1"

description = "Discord - QQ 消息转发插件"
authors = [
    { name = "xxtg666", email = "xxtg666@gmail.com" }
]
dependencies = [
    "nonebot2",
    "nonebot-adapter-onebot",
    "discord-py",
    "nonebot2[fastapi]",
    "httpx"
]
packages = [
    { include = "nonebot_plugin_discord_message_bridge", from = "src" },
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }